2.0.6.1:
* Added BotNet account login

2.0.6 (r1400) 2008-04-21:
* Added auto-rejoin afer being kicked (Issue 52)
* Added 'search' and 'searchrank' commands
* Force Cayenne to use the DriverManager to get a driver
* Re-enabled info/error responses forwarded to the user
* Auto-create users that don't exist in the DB when joining a channel
* Reduced the verbosity of exceptions on the GUI
* Improved feedback when the database fails to initialize
* Mail/AP notifications are now whispered
* Improved the chat long line splitter to use ellipses
* Missing keys in settings.ini will be added with the default value
* Vote is now a command which works by Account
* Fixed a BNetUser perspective bug affecting the ping command
* ChatQueue: Unban requires ops
* Fixed logic to decide which connection of a profile is the primary
* Added relationships to the DB editor
* Send mail to the bot master when a new command is created
* ChatQueue will be cleared when changing channels (Issue 72)
* Never kick/ban without ops
* Added kP BotNet support
* Disabled Cayenne logging
* Trivia is now a command
* Added deletion rules to the Cayenne mapping file
* Added a default exception handler
* Confirm row deletion in DatabaseEditor
* Version check will complete before connection to battle.net

2.0.5 (r1300) 2008-04-09:
* Added a Cayenne persistence layer to address database problems
* Added StatString test cases
* The 'renameaccount' command now picks up the case of the old account name
* The 'unban' command now infers the user namespace
* Fixed a bug where super-users couldn't use commands
* Added more database editors
* Fixed a bug affecting 'kick' and 'ban' when searching for users
* Added 'votekick' 'voteban' and 'votecancel' commands
* Logs will be saved to log.txt by default
* Added a profile editor
* Fixed a bug with the chat splitter
* Added an 'allseen' command
* Fixed a bug where auto-promotions were case sensitive
* Remove stale users from the database

2.0.4.2 (r1237) 2008-04-01: