@@ -1,5 +1,6 @@
 2.0.6.1:
 * Added BotNet account login
+* CDKeys are now dumped to cdkeys.processed.txt in a well-formatted way
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
